test/TestPhases/typechecker/invalid/booleanCallX3.blc
module


activity other (i: bool)()
    await 17
end

activity empty ()()
    var x: bool = false

    x = x or true
    run other(x)
    
end
